tictactoe OK, factorisation of js

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ h1 {
     text-align: center;
     margin: 2em;
     font-size: 2em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 section.grid {
