--- a/styleP4.css
+++ b/styleP4.css
@@ -18,6 +18,42 @@ h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+h2 {
+    font-style: italic;
+}
+
+.logger {
+    backdrop-filter: blur(100px);
+    padding: 1em 2em;
+    border-radius: 1em;
+    position: absolute;
+    top: 25%;
+    left: 5%;
+    width: 15em;
+}
+
+.log {
+    overflow-y: scroll;
+    height: 15em;
+    padding: 1em;
+    line-height: 2em;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    border-radius: 10px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: rgb(126, 126, 126);
+    border-radius: 10px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(109, 109, 109);
+  }
+
+
 section.grid {
     display: grid;
     margin: 0 auto;
@@ -79,20 +115,19 @@ section.grid div.blue {
 }
 
 section.grid div#hoverable.pulseRed {
-    animation: pulseRed 2s infinite;
+    animation: pulseRed 4s infinite;
+    opacity: 30%;
 }
 
 @keyframes pulseRed {
     25% {
         background: rgb(255, 53, 53);
-        opacity: 50%;
     }
     50% {
         background: transparent;
     }
     75% {
         background: rgb(255, 53, 53);
-        opacity: 50%;
     }
     100% {
         background: transparent;
@@ -100,20 +135,19 @@ section.grid div#hoverable.pulseRed {
 }
 
 section.grid div#hoverable.pulseBlue {
-    animation: pulseBlue 2s infinite;
+    animation: pulseBlue 4s infinite;
+    opacity: 30%;
 }
 
 @keyframes pulseBlue {
     25% {
         background: rgb(123, 123, 255);
-        opacity: 50%;
     }
     50% {
         background: transparent;
     }
     75% {
         background: rgb(123, 123, 255);
-        opacity: 50%;
     }
     100% {
         background: transparent;
